Update model poisoning

--- a/config.yaml
+++ b/config.yaml
@@ -17,9 +17,9 @@ fed_config:
   B: 2048
   criterion: torch.nn.CrossEntropyLoss
   optimizer: torch.optim.SGD
-  attack_mode: 'Label-Flipping'
+  attack_mode: 'Model-Poisoning'
   defence_mode: 'AE'
-  scale_attack: 3
+  scale_attack: -100
 ---
 optim_config:
   lr: 0.001
@@ -31,11 +31,6 @@ init_config:
   gpu_ids: [0, 1, 2]
 ---
 model_config: 
-  #name: TwoNN
-  #in_features: 784
-  #num_hiddens: 200
-  #num_classes: 10
-  
   name: CNN
   in_channels: 1
   hidden_channels: 64
@@ -49,4 +44,4 @@ log_config:
   tb_host: "0.0.0.0"
 ---
 average_config:
-  lr_server: 1.0
+  lr_server: 0.9
